Fuoten 0.6.4 - 2018-12-04
- SailfishOS
  * note: maintenance update for sixth preview release
  * fixed: text that is too long destroys the layout (#43)
  * fixed: renaming dialogs are not accepted on enter key (#45)

Fuoten 0.6.3 - 2018-11-26
- SailfishOS
  * note: maintenance update for sixth preview release
  * new: support compressed server responses (gzip and deflate)
  * improved: use icons fitting the current screen pixel ratio
  * improved: add an option to disable the push up menu on article page and hide it by default
  * improved: set default request timeout to 300 seconds to improve reliability for long running
    remote actions like marking articles as read
  * fixed: mark all items as read (#40)
- General
  * new: French translation by Antoine Vacher

Fuoten 0.6.2 - 2017-11-06
- SailfishOS
  * note: maintenance update for sixth preview release
  * fixed: wrong association to startup wizard account page scroll decorator flickable property (#39)

Fuoten 0.6.1 - 2017-10-27
- SailfishOS
  * note: maintenance update for sixth preview release
  * improved: add cover action to copy article link to clipboard
  * improved: add share entry to article push up menu
  * fixed: initial synchronization fails (#38)

Fuoten 0.6.0 - 2017-10-27
- SailfishOS
  * note: sixth preview release
  * new: use notifications to notify about succeeded tasks and occuring errors (#36)
  * new: pseudo background updates that synchronize with the server activated by user interaction (#25)
  * new: share links with the SailfishOS sharing mechanism
  * new: settings for font sizes in internal view and internal web view
  * improved: store the ownCloud/Nextcloud password AES256 encrypted
  * improved: navigation buttons for the internal web view (#21)
  * improved: show information about current article on the cover (#31)
  * improved: user agent for the web view is now selectable on a per feed setting
  * fixed: remorse item on feed entry in folder fiew destroys the layout (#30)